# CloudRadar

./: LICENSE  README.md
DevOps Tool/: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
DevOps Tool/.github/workflows/: ci.yml
DevOps Tool/cloud_cspm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
DevOps Tool/cspm/: __init__.py  cli.py  config.py  constants.py
DevOps Tool/cspm/attack_path/: __init__.py  attack_path_engine.py  path_analyzer.py
DevOps Tool/cspm/change_detection/: __init__.py  change_detector.py  snapshot_manager.py  timeline_engine.py
DevOps Tool/cspm/compliance/: __init__.py  cis_checks.py  compliance_mapper.py  compliance_report.py  hipaa_checks.py  iso27001_checks.py  pci_checks.py  soc2_checks.py
DevOps Tool/cspm/core/: __init__.py  asset_catalog.py  asset_collector.py  scan_controller.py
DevOps Tool/cspm/ui/: __init__.py  (+5 more)
DevOps Tool/docs/: AI_SCANS.md  API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  IMPROVEMENTS.md  MULTI_ACCOUNT_SETUP.md  RUNBOOKS.md  SETUP.md
DevOps Tool/examples/: governance_policies.yaml  sample_config.yaml
DevOps Tool/frontend/: index.html  package-lock.json  package.json  vite.config.js
DevOps Tool/scripts/: run_audit.sh  run_pentest.sh  run_ui.ps1  run_ui.sh
DevOps Tool/tests/: conftest.py  test_api_endpoints.py  test_attack_paths.py  test_cloudfront_scanner.py  test_compliance.py  test_cost_scanner.py  test_remediation.py  test_risk_engine.py  test_rule_engine.py  test_s3_scanner.py  test_scanners.py
(+173 files in other folders)
