[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-cspm"
version = "0.1.0"
description = "CloudRadar - Multi-cloud CSPM: Security scanning, audit, governance, pen testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.28.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
cspm = "cspm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cspm*"]
